# openhw-2025-SAT-FPGA

./: .gitignore  CMakeLists.txt  Makefile  README.md  env.sh  parse_result_hw.py  readme.txt  result_hw.txt  results.txt  runCompile.sh  satcomp_all.sh  testcases.sh  testcases_sim.sh
SAT_test_cases/sat/: aalto.dimacs  bmc-ibm-5.dimacs  bmc-ibm-7.dimacs  logisticsb.dimacs  qg3-08.dimacs  ssa7552-160.dimacs
SAT_test_cases/satlib/: hole9_unsat.cnf  uf100-010_sat.cnf  uf125-01_sat.cnf  uf150-08_sat.cnf  uuf100-02_unsat.cnf  uuf125-05_unsat.cnf
SAT_test_cases/unsat/: 16_16_3.txt  16_8_5.txt  16_8_6.txt  16_8_7.txt  4_4_1.txt  4_4_2.txt  9_8_7.txt  aalto_2.dimacs  aim100.dimacs  marg3x3add8.shuffled-as.sat03-1449.cnf  marg3x3add8ch.shuffled-as.sat03-1448.cnf  pret150_75.dimacs  ssa0432-003.dimacs  ssa2670-141.dimacs  ssa6288-047.dimacs
cmake/: FindVitisHLS.cmake  FindXRT.cmake
hls/: CMakeLists.txt
hls/src/: learn.cpp  priority_queue_functions.cpp  timer.cpp
host/: CMakeLists.txt
host/src/: host.cpp
include/: data_structures.h  discover.h  fpga_solver.h
src/: backtrack.cpp  backtrack.h  clause_store_handler.cpp  color.cpp  color.h  configuration.json  copy_in.cpp  copy_in.h  decide.cpp  decide.h  discover.cpp  host.cpp  k2k.cfg  learn.h  location_handler.cpp  manage.cpp  manage.h  message.cpp  minimize.cpp  minimize.h  pq_handler.cpp  priority_queue_functions.h  restart.cpp  solver.cpp
tcl/: phys_opt_loop.tcl  post_place_qor.tcl
tcl_scripts/: constrain_blocks.tcl  phys_opt_loop.tcl  post_place_qor.tcl
